--- a/src/css/index.css
+++ b/src/css/index.css
@@ -158,6 +158,7 @@ header .header-wrap{
     width: 22px;
     height: 24px;
     margin-left: -11px;
+    cursor: pointer;
     background:url("../imgs/iconall.png") 0 -250px;
 }
 .play-banner .progress-bar .cur .btn:hover{
@@ -1034,6 +1035,22 @@ figure span {
 				2px 2px 2px #eee;
 	margin:0 auto;
 }
+.my_music .no-login{
+	display: none;
+	width: 100%;
+	text-align: center;
+}
+.my_music .no-login h4{
+	font-size: 18px;
+	font-weight: normal;
+	line-height: 100px;
+}
+.my_music .no-login img{
+	width: 400px;
+	height: 400px;
+	border-radius: 50%;
+	display: inline-block;
+}
 .my_music .u_title{
 	width: 100%;
 	padding: 0 10px 0 32px;
@@ -1115,6 +1132,22 @@ figure span {
 	box-shadow: -2px 2px 2px #eee,
 				2px 2px 2px #eee;
 	margin:0 auto;
+}
+.my_collect .no-login{
+	display: none;
+	width: 100%;
+	text-align: center;
+}
+.my_collect .no-login h4{
+	font-size: 18px;
+	font-weight: normal;
+	line-height: 100px;
+}
+.my_collect .no-login img{
+	width: 400px;
+	height: 400px;
+	border-radius: 50%;
+	display: inline-block;
 }
 .my_collect .u_title{
 	width: 100%;
